<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/ImageDescription"
            android:src="@drawable/ic_lock" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/membermodify_message1"
            android:textColor="@color/md_grey_900"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:text="@string/membermodify_message2"
            android:textColor="@color/md_grey_900"
            android:textSize="32sp"
            android:textStyle="bold" />

        <com.ikco10.allbasketm.Utils.ClearEditText
            android:id="@+id/fragmentmodify1_nameet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="36dp"
            android:hint="@string/membermodify_namehint"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLength="10"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="#2208A1E8"
            android:textColorHint="@color/thumb"
            android:textCursorDrawable="@drawable/edittext_cursor"
            android:textSize="22sp" />

        <com.ikco10.allbasketm.Utils.ClearEditText
            android:id="@+id/fragmentmodify1_celet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:digits="0123456789+"
            android:hint="@string/membermodify_celhint"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:maxLength="13"
            android:maxLines="1"
            android:textColor="@color/colorPrimary"
            android:textColorHighlight="#2208A1E8"
            android:textColorHint="@color/thumb"
            android:textCursorDrawable="@drawable/edittext_cursor"
            android:textSize="22sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>