<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="32dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/ImageDescription"
            android:padding="3dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_close" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/signup_title1"
            android:textColor="@color/md_grey_900"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="32dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:enabled="false"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/next"
            android:textColor="@color/md_white_1000"
            android:textSize="32sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:id="@+id/headLine"
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="@color/md_grey_400" />

    <com.ikco10.allbasketsignup.Utils.ViewPagerNonSwipe
        android:id="@+id/masterViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>