<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:animateLayoutChanges="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:gravity="center_vertical"
                    android:text="@string/membersignup_name"
                    android:textColor="@color/md_grey_900"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/sex"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/fragmentmodify2_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/membersignup_male"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/fragmentmodify2_female"
                        android:layout_marginStart="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/membersignup_female"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RadioGroup>

            </LinearLayout>

            <com.ikco10.allbasketm.Utils.ClearEditText
                android:id="@+id/membersearch_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="40dp"
                android:ems="10"
                android:hint="@string/membersignup_namehint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLength="12"
                android:maxLines="1"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textColor="@color/colorPrimary"
                android:textColorHighlight="#2208A1E8"
                android:textColorHint="@color/thumb"
                android:textCursorDrawable="@drawable/edittext_cursor"
                android:textSize="22sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="3dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/celtv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/membersignup_cel"
                    android:textColor="@color/md_grey_900"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/sms"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginEnd="12dp"
                    android:scaleX="1.4"
                    android:scaleY="1.4"
                    app:layout_constraintBottom_toBottomOf="@id/celtv"
                    app:layout_constraintEnd_toStartOf="@id/smstext"
                    app:layout_constraintTop_toTopOf="@id/celtv" />

                <TextView
                    android:id="@+id/smstext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:paddingBottom="2dp"
                    android:text="@string/membermodify_sms"
                    android:textColor="@color/md_grey_900"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/sms"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/sms" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.ikco10.allbasketm.Utils.ClearEditText
                android:id="@+id/cel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="40dp"
                android:digits="0123456789+"
                android:hint="@string/membersignup_celhint"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="13"
                android:maxLines="1"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textColor="@color/colorPrimary"
                android:textColorHighlight="#2208A1E8"
                android:textColorHint="@color/thumb"
                android:textCursorDrawable="@drawable/edittext_cursor"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:text="@string/membersignup_tel"
                    android:textColor="@color/md_grey_900"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/telOverlap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/md_red_300"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <com.ikco10.allbasketm.Utils.ClearEditText
                android:id="@+id/membersearch_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="40dp"
                android:digits="0123456789+"
                android:hint="@string/membersignup_telhint"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:maxLength="13"
                android:maxLines="1"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textColor="@color/colorPrimary"
                android:textColorHighlight="#2208A1E8"
                android:textColorHint="@color/md_grey_500"
                android:textCursorDrawable="@drawable/edittext_cursor"
                android:textSize="22sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/addrtext"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:text="@string/membersignup_addr"
                    android:textColor="@color/md_grey_900"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/addrsearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_button"
                    android:paddingStart="48dp"
                    android:paddingEnd="48dp"
                    android:stateListAnimator="@null"
                    android:text="@string/search"
                    android:textColor="@color/md_white_1000"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/addrtext"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/addrtext" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.ikco10.allbasketm.Utils.ClearEditText
                android:id="@+id/membersearch_addr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="40dp"
                android:hint="@string/membersignup_addrhint"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lines="2"
                android:maxLines="2"
                android:minLines="1"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textColor="@color/colorPrimary"
                android:textColorHighlight="#2208A1E8"
                android:textColorHint="@color/thumb"
                android:textCursorDrawable="@drawable/edittext_cursor"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/membersignup_email"
                android:textColor="@color/md_grey_900"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.ikco10.allbasketm.Utils.ClearEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="40dp"
                android:hint="@string/membersignup_emailhint"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/colorPrimary"
                android:textColorHighlight="#2208A1E8"
                android:textColorHint="@color/md_grey_500"
                android:textCursorDrawable="@drawable/edittext_cursor"
                android:textSize="22sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="3dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cash"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:text="@string/membermodify_cash"
                    android:textColor="@color/md_grey_900"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/cashtype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:scaleX="1.4"
                    android:scaleY="1.4"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="@id/cash"
                    app:layout_constraintEnd_toStartOf="@id/cashtypetext"
                    app:layout_constraintTop_toTopOf="@id/cash" />

                <TextView
                    android:id="@+id/cashtypetext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:paddingBottom="2dp"
                    android:text="@string/membermodify_business"
                    android:textColor="@color/md_grey_900"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/cashtype"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/cashtype" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.ikco10.allbasketm.Utils.ClearEditText
                android:id="@+id/cashinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:hint="@string/membersignup_emailhint"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/colorPrimary"
                android:textColorHighlight="#2208A1E8"
                android:textColorHint="@color/md_grey_500"
                android:textCursorDrawable="@drawable/edittext_cursor"
                android:textSize="22sp" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie"
            android:layout_width="168dp"
            android:layout_height="168dp"
            android:layout_marginBottom="24dp" />

        <TextView
            android:id="@+id/welcomename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="88dp"
            android:textColor="@color/md_grey_900"
            android:textSize="32sp" />

        <Button
            android:id="@+id/confirm"
            style="?attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="168dp"
            android:layout_marginEnd="168dp"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:background="@drawable/background_button"
            android:stateListAnimator="@null"
            android:text="@string/confirm"
            android:textColor="@color/md_white_1000"
            android:textSize="32sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
